--- a/gallery.html
+++ b/gallery.html
@@ -207,7 +207,7 @@ img {vertical-align: middle;}
     </style>
   <img src="gallery/photo_2024-05-06_21-20-08_resized.jpg" style="height:350px">
 </div>
-  <p><font type="Times New Roman" size="4"> This is our pet cat named <sup>"Chanteq"</sup>, we have been taking care of her for 8 years. </p></font>
+  <p><font type="Times New Roman" size="4"> This is my pet cat named <sup>"Chanteq"</sup>, we have been taking care of her for 8 years. </p></font>
 </div>
 
 <div class="mySlides fade">
